--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,8 @@
 
     <link rel="stylesheet" href="{% static 'style.css' %}" />
   </head>
-   #
-</div>;
+   
+</div>
   {% block content %} 
   
 
