--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,15 +1,30 @@
-
-
-
-
 {% if messages %}
     {% for message in messages %}
         {% if message.tags == 'error' %}
-            <div class="alert alert-danger">{{ message }}</div>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                {{ message }}
+                
+            </div>
         {% elif message.tags == 'success' %}
-            <div class="alert alert-success">{{ message }}</div>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {{ message }}
+               
+            </div>
         {% else %}
-            <div class="alert alert-info">{{ message }}</div>
+            <div class="alert alert-info alert-dismissible fade show" role="alert">
+                {{ message }}
+                
+            </div>
         {% endif %}
     {% endfor %}
 {% endif %}
+
+
+<script>
+    // Automatically close the alerts after 10 seconds
+    $(document).ready(function() {
+        setTimeout(function() {
+            $(".alert").alert('close');
+        }, 5000); // 10,000 milliseconds = 10 seconds
+    });
+</script>
