--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   {% load static %}
+  {% load tz %}
+  {% load humanize %}
+
   <head>
     <script scr="{% static 'color-modes.js' %}"></script>
 
