--- a/templates/index.html
+++ b/templates/index.html
@@ -68,13 +68,19 @@
   </div>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <a href="#" class="navbar-brand d-flex align-items-center">
+      <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
         <strong>EventApp</strong>
       </a>
-      
+
       {% if request.user.is_authenticated %}
-    <a class="text-white text-decoration-none" href="{% url 'logout' %}">Logout</a>
+      <p> 
+        <a class="text-white text-decoration-none" href="{% url 'logout' %}">Logout</a>
+        &nbsp&nbsp&nbsp&nbsp&nbsp
+
+        <a class="text-white text-decoration-none" href="{% url 'bookings' %}">Bookings</a>
+
+      </p>
 {% else %}
     <a class="text-white text-decoration-none" href="{% url 'login' %}">Login</a>
 {% endif %}
@@ -148,12 +154,13 @@
           <div class="card shadow-sm">
             <img src="{% static 'images/event1.jpg' %}" alt="">
             <div class="card-body">
-              <p class="card-text">RE-DIRECTION <br>Sept 3rd, | Mbezi Gadern, Dar Es Salaam</p>
+              <p class="card-text">{{ event.name }} <br> {{ event.time|date:"M jS, Y" }}
+                , | {{ event.location }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a class="text-decoration-none" href="{% url 'event' %}">View</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a class="text-decoration-none" href="{% url 'event' event.id %}">View</a></button>
                 </div>
-                <small class="text-body-secondary">9 mins</small>
+                <small class="text-body-secondary">Posted: {{ event.created_date | timesince }} Ago</small>
               </div>
             </div>
           </div>
