--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -136,11 +136,13 @@
                     {% endif %}
                       
                     <td>
-                      <button class="btn btn-danger">
-                        <a class="text-white text-decoration-none" href=""
-                          >CANCEL</a
-                        >
-                      </button>
+                      {% if book.is_canceled %}
+                      <button class="btn btn-danger"  >CANCELLED</button>
+                      {% else %}
+                      <button class="btn btn-danger"  type="button"  data-bs-toggle="modal" data-bs-target="#cancelModal-{{ book.id }}" >CANCEL</button>
+                      {% endif %}
+                      <td>
+
                     </td>
                   </tr>
 
@@ -162,6 +164,36 @@
                      </div>
                    </div>
                  </div>
+
+
+                 <div class="modal fade" id="cancelModal-{{ book.id }}" tabindex="-1" role="dialog" aria-labelledby="qrModalLabel-{{ event_booking.id }}" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                     
+                      <div class="modal-body py-5">
+                        <h5 class="text-center">Are you sure you want to cancel this booking?</h5>
+                        {% comment %} <img src="{{ book.qr_code.url }}" alt="QR Code for Booking ID: {{ book.id }}" class="img-fluid"> {% endcomment %}
+                        <div class="d-flex justify-content-center">
+                          <div class="bb px-2">
+                            <button class="btn btn-info" type="button" class="close" data-bs-dismiss="modal">NO</button>
+
+                          </div>
+                          <div class="bb px-2">
+                            <form action="{% url 'cancel_book_event' %}" method="post">
+                              {% csrf_token %}
+                              <input type="hidden" name="booking_id" value="{{ book.id }}">
+                              <button type="submit" name="cancelbook" class="btn btn-danger">CANCEL</button>
+                            </form>
+                          </div>
+                          
+
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
                  
                 {% endfor %}
                     
