--- a/templates/index.html
+++ b/templates/index.html
@@ -198,7 +198,7 @@
             <strong>Capacity: </strong> {{ venue.capacity }} people| <strong> Location: </strong> {{ venue.location }} <strong> Price: </strong> {{venue.price_per_hour}}Tsh
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a class="text-decoration-none" href="{% url 'venue' venue.id %}">View</a></button>
                 </div>
                 <small class="text-body-secondary">Posted: {{ venue.created_date | timesince }} Ago</small>
               </div>
