--- a/templates/index.html
+++ b/templates/index.html
@@ -188,19 +188,19 @@
         <div class="col">
           <div class="card shadow-sm">
             {% if venue.photo %}
-            <img src="{{ venue.photo.url }}" alt=""> 
+            <img src="{{ venue.photo.url }}" alt=""  height="300" > 
             {% else %}
-            <img src="{% static 'images/venue1.jpg' %}" alt=""> 
+            <img src="{% static 'images/venue1.jpg' %}" alt=""  height="300"> 
             {% endif %}
         
    <div class="card-body">
               <p class="card-text">{{ venue.name }} <br>
-            <strong>Capacity: </strong> {{ venue.capacity }} people| <strong> Location: </strong> {{ venue.location }} <strong> Price: </strong> {{venue.price_per_hour}}Tsh
+            <strong>Capacity: </strong> {{ venue.capacity }} people| <strong> Location: </strong> {{ venue.location }} <strong><br> Price: </strong> {{venue.price_per_hour}}Tsh
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary"><a class="text-decoration-none" href="{% url 'venue' venue.id %}">View</a></button>
                 </div>
-                <small class="text-body-secondary">Posted: {{ venue.created_date | timesince }} Ago</small>
+                <small class="text-body-secondary">Posted: {{ venue.created_at | timesince }} Ago</small>
               </div>
             </div>
           </div>
