--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -121,6 +121,8 @@
               <tr>
                 <th>#</th>
                 <th>Name</th>
+                <th>User</th>
+
                 <th>Location</th>
                 <th>Price</th>
                 <th>QR CODE</th>
@@ -133,6 +135,8 @@
                 <tr>
                     <th scope="row">1</th>
                     <td>{{ book.event.name }}</td>
+                    <td>{{ book.user.first_name }}</td>
+
                     <td>{{ book.event.location }}</td>
 
                     <td>{{ book.event.price }}</td>
