--- a/templates/bookings_venue.html
+++ b/templates/bookings_venue.html
@@ -141,7 +141,12 @@
                     <td>{{ book.venue.price_per_hour }}Tsh</td>
                     
                     {% if book.is_approved %}
+                    
+                    {% if book.is_canceled %}
+                    <td><button class="btn btn-danger"  >CANCELLED</button></td>
+                    {% else %}
                     <td><button class="btn btn-success"  type="button"  data-bs-toggle="modal" data-bs-target="#qrModal-{{ book.id }}" >SCAN</button></td>
+                    {% endif %}
                     {% else %}
                     <td><button class="btn btn-warning">PENDING</button></td>
                     {% endif %}
