--- a/templates/event.html
+++ b/templates/event.html
@@ -81,7 +81,7 @@
               <div class="p-3 pt-0">
                 <h1>{{ event.name }} </h1>
                 <p><strong> Location: </strong> {{ event.location }} <br>
-                <strong>Capacity: </strong>  {{ event.maximum_people }} People<br><strong> Duration: </strong> {{ event.time|date:"M jS, Y" }} | <strong>End Time: {{ event.time }} </strong><br> <strong> Price: </strong> {{ event.price }} Tsh</p>
+                <strong>Capacity: </strong>  {{ event.maximum_people }} People<br><strong> Duration: </strong> {{ event.time|date:"M jS, Y" }} | <strong>End Time: {{ event.end_time }} </strong><br> <strong> Price: </strong> {{ event.price }} Tsh</p>
                 {% if event.event_type %}
                       <strong>Event Type: </strong>{{event.event_type}}
                      {% endif %}
