--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  
   <body>
 
  
@@ -144,6 +146,16 @@
     <div class="container">
 
       {% include 'messages.html' %}
+      <div class="search-card">
+        <div class="card">
+          <div class="card-body d-flex">
+            <input type="search" name="search" id="search-input" placeholder="Search Here" class="form-control m-1">
+            <button id="search-btn" class="btn btn-primary m-1">SEARCH</button>
+          </div>
+        </div>
+      </div>
+      
+      <br>
 
       <h3 id="events" class="pb-2">Recent Events</h3>
 
@@ -151,7 +163,7 @@
         {% for event in events %}
 
         <div class="col">
-          <div class="card shadow-sm">
+          <div class="card cardx shadow-sm">
             
             {% if event.photo %}
             <img src="{{ event.photo.url }}" alt="" height="250px">
@@ -186,7 +198,7 @@
         {% for venue in venues %}
 
         <div class="col">
-          <div class="card shadow-sm">
+          <div class="card cardx shadow-sm">
             {% if venue.photo %}
             <img src="{{ venue.photo.url }}" alt=""  height="300" > 
             {% else %}
@@ -232,6 +244,31 @@
   </div>
 </footer>
 
+
+<script>
+  $(document).ready(function() {
+    // Function to handle the search button click
+    $("#search-btn").click(function() {
+      var searchTerm = $("#search-input").val().toLowerCase();
+
+      // Perform the search logic here
+      // You can use jQuery to filter and display the search results
+      // For example, you can hide elements that don't match the search term
+
+      // Example:
+      $(".cardx").each(function() {
+        var cardText = $(this).text().toLowerCase();
+        if (cardText.includes(searchTerm)) {
+          $(this).show();
+        } else {
+          $(this).hide();
+        }
+      });
+    });
+  });
+</script>
+
+ 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="{% static 'script.js' %}"></script>
